# fruit-detection-v2

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  analyze_dataset.py  config.py  export.py  fruit_detection_v2_explanation.txt  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  run_inference.py  surgical_changes.txt  train.py  verify.py  webcam_inference.py
custom_detector/: anchor_points.py  assigner.py  backbone.py  checkpoint.py  dataset.py  inference.py  loss.py  model.py  neck.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
runs/fruit_v2/: config_snapshot.json  history.csv
scripts/: run.bat  run.ps1  run.sh
src/fruit_detector/: __init__.py  config.py
src/fruit_detector/cli/: __init__.py  analyze.py  export.py  infer.py  train.py  verify.py  webcam.py
src/fruit_detector/data/: __init__.py  dataset.py
src/fruit_detector/engine/: __init__.py  trainer.py
src/fruit_detector/model/: __init__.py  backbone.py  components.py  detector.py  ema.py  heads.py  neck.py
src/fruit_detector/ops/: __init__.py  anchor_points.py  assigner.py  inference.py  loss.py
src/fruit_detector/utils/: __init__.py  checkpoint.py  tta.py  visualization.py
tests/: conftest.py  test_cli.py  test_data.py  test_model.py  test_ops.py  test_trainer.py
